Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -367,5 +367,6 @@
   "mn82:42.28": "und Reichtum kann das Alter nicht bannen; ",
   "mn82:42.29": "denn die Weisen sagen, das Leben ist kurz, ",
   "mn82:42.30": "es ist zeitlich und muss zugrunde gehen. ",
-  "mn82:42.31": "Reiche und Arme fühlen die Berührung, "
+  "mn82:42.31": "Reiche und Arme fühlen die Berührung, ",
+  "mn82:42.32": "Toren und Weise fühlen sie auch. "
 }
