Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -369,5 +369,6 @@
   "mn82:42.30": "es ist zeitlich und muss zugrunde gehen. ",
   "mn82:42.31": "Reiche und Arme fühlen die Berührung, ",
   "mn82:42.32": "Toren und Weise fühlen sie auch. ",
-  "mn82:42.33": "Der Tor liegt von seiner eigenen Torheit niedergestreckt, "
+  "mn82:42.33": "Der Tor liegt von seiner eigenen Torheit niedergestreckt, ",
+  "mn82:42.34": "der Weise zittert nicht bei der Berührung. "
 }
