Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -370,5 +370,6 @@
   "mn82:42.31": "Reiche und Arme fühlen die Berührung, ",
   "mn82:42.32": "Toren und Weise fühlen sie auch. ",
   "mn82:42.33": "Der Tor liegt von seiner eigenen Torheit niedergestreckt, ",
-  "mn82:42.34": "der Weise zittert nicht bei der Berührung. "
+  "mn82:42.34": "der Weise zittert nicht bei der Berührung. ",
+  "mn82:42.35": "Daher ist Weisheit viel besser als Reichtum, "
 }
