Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -371,5 +371,6 @@
   "mn82:42.32": "Toren und Weise fühlen sie auch. ",
   "mn82:42.33": "Der Tor liegt von seiner eigenen Torheit niedergestreckt, ",
   "mn82:42.34": "der Weise zittert nicht bei der Berührung. ",
-  "mn82:42.35": "Daher ist Weisheit viel besser als Reichtum, "
+  "mn82:42.35": "Daher ist Weisheit viel besser als Reichtum, ",
+  "mn82:42.36": "denn durch Weisheit erlangt man in diesem Leben Vollkommenheit. "
 }
