--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -19,5 +19,6 @@
   "dhp119:3": "ali kad donese plod, ",
   "dhp119:4": "tada zlotvor prepozna zlodelo. ",
   "dhp120:1": "Možda ga vidi i kao zlo, ",
-  "dhp120:2": "sve dok dobročinstvo ne donese plod, "
+  "dhp120:2": "sve dok dobročinstvo ne donese plod, ",
+  "dhp120:3": "ali kad donese plod, "
 }
