--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -375,5 +375,6 @@
   "mn82:42.36": "denn durch Weisheit erlangt man in diesem Leben Vollkommenheit. ",
   "mn82:42.37": "Doch wenn man aufgrund von Täuschung die Vollkommenheit nicht erlangt, ",
   "mn82:42.38": "wird man Leben um Leben Schlechtes tun. ",
-  "mn82:42.39": "Wer in einen Mutterleib und in jene Welt eintritt, "
+  "mn82:42.39": "Wer in einen Mutterleib und in jene Welt eintritt, ",
+  "mn82:42.40": "wird von Leben zu Leben umwandern. "
 }
