--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -378,5 +378,6 @@
   "mn82:42.39": "Wer in einen Mutterleib und in jene Welt eintritt, ",
   "mn82:42.40": "wird von Leben zu Leben umwandern. ",
   "mn82:42.41": "Wenn jemand mit wenig Weisheit diesem vertraut, ",
-  "mn82:42.42": "tritt auch er in einen Mutterleib und in jene Welt ein. "
+  "mn82:42.42": "tritt auch er in einen Mutterleib und in jene Welt ein. ",
+  "mn82:42.43": "Wie ein Räuber, der an der Tür gefangen wird, "
 }
