--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -380,5 +380,6 @@
   "mn82:42.41": "Wenn jemand mit wenig Weisheit diesem vertraut, ",
   "mn82:42.42": "tritt auch er in einen Mutterleib und in jene Welt ein. ",
   "mn82:42.43": "Wie ein Räuber, der an der Tür gefangen wird, ",
-  "mn82:42.44": "für seine schlechten Taten bestraft wird, "
+  "mn82:42.44": "für seine schlechten Taten bestraft wird, ",
+  "mn82:42.45": "so werden Menschen, wenn sie verscheiden, "
 }
