Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -384,5 +384,6 @@
   "mn82:42.45": "so werden Menschen, wenn sie verscheiden, ",
   "mn82:42.46": "in jener Welt für ihre schlechten Taten bestraft. ",
   "mn82:42.47": "Sinnenfreuden sind vielfältig, süß, entzückend, ",
-  "mn82:42.48": "sie tarnen sich und erregen den Geist. "
+  "mn82:42.48": "sie tarnen sich und erregen den Geist. ",
+  "mn82:42.49": "Ich sah die Gefahr in sinnlicher Erregung, "
 }
