--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -386,5 +386,6 @@
   "mn82:42.47": "Sinnenfreuden sind vielfältig, süß, entzückend, ",
   "mn82:42.48": "sie tarnen sich und erregen den Geist. ",
   "mn82:42.49": "Ich sah die Gefahr in sinnlicher Erregung, ",
-  "mn82:42.50": "da zog ich fort, o König. "
+  "mn82:42.50": "da zog ich fort, o König. ",
+  "mn82:42.51": "Wie Obst vom Baum fällt, so fallen Menschen, "
 }
