--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -387,5 +387,6 @@
   "mn82:42.48": "sie tarnen sich und erregen den Geist. ",
   "mn82:42.49": "Ich sah die Gefahr in sinnlicher Erregung, ",
   "mn82:42.50": "da zog ich fort, o König. ",
-  "mn82:42.51": "Wie Obst vom Baum fällt, so fallen Menschen, "
+  "mn82:42.51": "Wie Obst vom Baum fällt, so fallen Menschen, ",
+  "mn82:42.52": "jung und alt, wenn der Körper auseinanderbricht. "
 }
