Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -21,5 +21,6 @@
   "dhp120:1": "Možda ga vidi i kao zlo, ",
   "dhp120:2": "sve dok dobročinstvo ne donese plod, ",
   "dhp120:3": "ali kad donese plod, ",
-  "dhp120:4": "tada dobročinitelj prepozna dobročinstvo. "
+  "dhp120:4": "tada dobročinitelj prepozna dobročinstvo. ",
+  "dhp121:1": "Ne zanemaruj zlo, "
 }
