Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -23,5 +23,6 @@
   "dhp120:3": "ali kad donese plod, ",
   "dhp120:4": "tada dobročinitelj prepozna dobročinstvo. ",
   "dhp121:1": "Ne zanemaruj zlo, ",
-  "dhp121:2": "misleći: „Ono mene neće osvojiti.” "
+  "dhp121:2": "misleći: „Ono mene neće osvojiti.” ",
+  "dhp121:3": "Kap po kap "
 }
