Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -344,7 +344,7 @@
   "mn82:42.5": "Geizig horten sie ihren Reichtum, ",
   "mn82:42.6": "verlangen nach immer mehr Sinnenfreuden. ",
   "mn82:42.7": "Ein König, der die Welt mit Gewalt erobert hätte ",
-  "mn82:42.8": "und das Land von einem Meer zum anderen beherrscht, ",
+  "mn82:42.8": "und das Land von einem Meer zum anderen beherrschte, ",
   "mn82:42.9": "unzufrieden mit dieser Küste, ",
   "mn82:42.10": "würde noch nach der anderen verlangen. ",
   "mn82:42.11": "Nicht nur der König, auch andere ",
