Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -25,5 +25,6 @@
   "dhp121:1": "Ne zanemaruj zlo, ",
   "dhp121:2": "misleći: „Ono mene neće osvojiti.” ",
   "dhp121:3": "Kap po kap ",
-  "dhp121:4": "i vedro se napuni vodom, "
+  "dhp121:4": "i vedro se napuni vodom, ",
+  "dhp121:5": "a budala zlom, "
 }
