Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -27,5 +27,6 @@
   "dhp121:3": "Kap po kap ",
   "dhp121:4": "i vedro se napuni vodom, ",
   "dhp121:5": "a budala zlom, ",
-  "dhp121:6": "čak i ako ga sakuplja malo pomalo. "
+  "dhp121:6": "čak i ako ga sakuplja malo pomalo. ",
+  "dhp122:0": "Ne zanemaruj dobro, "
 }
