Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -29,5 +29,6 @@
   "dhp121:5": "a budala zlom, ",
   "dhp121:6": "čak i ako ga sakuplja malo pomalo. ",
   "dhp122:0": "",
-  "dhp122:1": "Ne zanemaruj dobro, "
+  "dhp122:1": "Ne zanemaruj dobro, ",
+  "dhp122:2": "misleći: „Ono mene neće osvojiti.” "
 }
