Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -31,5 +31,6 @@
   "dhp122:0": "",
   "dhp122:1": "Ne zanemaruj dobro, ",
   "dhp122:2": "misleći: „Ono mene neće osvojiti.” ",
-  "dhp122:3": "Kap po kap "
+  "dhp122:3": "Kap po kap ",
+  "dhp122:4": "i vedro se napuni vodom, "
 }
