--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -32,5 +32,6 @@
   "dhp122:1": "Ne zanemaruj dobro, ",
   "dhp122:2": "misleći: „Ono mene neće osvojiti.” ",
   "dhp122:3": "Kap po kap ",
-  "dhp122:4": "i vedro se napuni vodom, "
+  "dhp122:4": "i vedro se napuni vodom, ",
+  "dhp122:5": "a mudar dobrim, "
 }
