Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -33,5 +33,6 @@
   "dhp122:2": "misleći: „Ono mene neće osvojiti.” ",
   "dhp122:3": "Kap po kap ",
   "dhp122:4": "i vedro se napuni vodom, ",
-  "dhp122:5": "a mudar dobrim, "
+  "dhp122:5": "a mudar dobrim, ",
+  "dhp122:6": "čak i ako ga sakuplja malo pomalo. "
 }
