--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -34,5 +34,6 @@
   "dhp122:3": "Kap po kap ",
   "dhp122:4": "i vedro se napuni vodom, ",
   "dhp122:5": "a mudar dobrim, ",
-  "dhp122:6": "čak i ako ga sakuplja malo pomalo. "
+  "dhp122:6": "čak i ako ga sakuplja malo pomalo. ",
+  "dhp123:1": "Kao što trgovac s malom pratnjom i mnogo robe "
 }
