Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -35,5 +35,6 @@
   "dhp122:4": "i vedro se napuni vodom, ",
   "dhp122:5": "a mudar dobrim, ",
   "dhp122:6": "čak i ako ga sakuplja malo pomalo. ",
-  "dhp123:1": "Kao što trgovac s malom pratnjom i mnogo robe "
+  "dhp123:1": "Kao što trgovac s malom pratnjom i mnogo robe ",
+  "dhp123:2": "izbegava opasan put, "
 }
