--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -37,5 +37,6 @@
   "dhp122:6": "čak i ako ga sakuplja malo pomalo. ",
   "dhp123:1": "Kao što trgovac s malom pratnjom i mnogo robe ",
   "dhp123:2": "izbegava opasan put, ",
-  "dhp123:3": "kao što željan života izbegava otrov, "
+  "dhp123:3": "kao što željan života izbegava otrov, ",
+  "dhp123:4": "tako i zlo izbegavati treba. "
 }
