Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -38,5 +38,6 @@
   "dhp123:1": "Kao što trgovac s malom pratnjom i mnogo robe ",
   "dhp123:2": "izbegava opasan put, ",
   "dhp123:3": "kao što željan života izbegava otrov, ",
-  "dhp123:4": "tako i zlo izbegavati treba. "
+  "dhp123:4": "tako i zlo izbegavati treba. ",
+  "dhp124:1": "Ako na dlanu rane nema, "
 }
