Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -41,5 +41,6 @@
   "dhp123:4": "tako i zlo izbegavati treba. ",
   "dhp124:1": "Ako na dlanu rane nema, ",
   "dhp124:2": "možeš na njemu i otrov nositi; ",
-  "dhp124:3": "otrov ne škodi onome bez rane. "
+  "dhp124:3": "otrov ne škodi onome bez rane. ",
+  "dhp124:4": "Nema zla za onoga ko ga ne čini. "
 }
