Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -43,5 +43,6 @@
   "dhp124:2": "možeš na njemu i otrov nositi; ",
   "dhp124:3": "otrov ne škodi onome bez rane. ",
   "dhp124:4": "Nema zla za onoga ko ga ne čini. ",
-  "dhp125:1": "Ko povredi nevinoga, "
+  "dhp125:1": "Ko povredi nevinoga, ",
+  "dhp125:2": "čoveka predanog i čistog, "
 }
