Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -45,5 +45,6 @@
   "dhp124:4": "Nema zla za onoga ko ga ne čini. ",
   "dhp125:1": "Ko povredi nevinoga, ",
   "dhp125:2": "čoveka predanog i čistog, ",
-  "dhp125:3": "ta luda sama sebi zlo čini, "
+  "dhp125:3": "ta luda sama sebi zlo čini, ",
+  "dhp125:4": "kao da prašinu baca uz vetar. "
 }
