Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -46,5 +46,6 @@
   "dhp125:1": "Ko povredi nevinoga, ",
   "dhp125:2": "čoveka predanog i čistog, ",
   "dhp125:3": "ta luda sama sebi zlo čini, ",
-  "dhp125:4": "kao da prašinu baca uz vetar. "
+  "dhp125:4": "kao da prašinu baca uz vetar. ",
+  "dhp126:1": "U materici se jedni rađaju, "
 }
