--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -47,5 +47,6 @@
   "dhp125:2": "čoveka predanog i čistog, ",
   "dhp125:3": "ta luda sama sebi zlo čini, ",
   "dhp125:4": "kao da prašinu baca uz vetar. ",
-  "dhp126:1": "U materici se jedni rađaju, "
+  "dhp126:1": "U materici se jedni rađaju, ",
+  "dhp126:2": "a zločinci u paklu; "
 }
