Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -48,5 +48,6 @@
   "dhp125:3": "ta luda sama sebi zlo čini, ",
   "dhp125:4": "kao da prašinu baca uz vetar. ",
   "dhp126:1": "U materici se jedni rađaju, ",
-  "dhp126:2": "a zločinci u paklu; "
+  "dhp126:2": "a zločinci u paklu; ",
+  "dhp126:3": "na nebo dobročinitelji idu, "
 }
