--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -49,5 +49,6 @@
   "dhp125:4": "kao da prašinu baca uz vetar. ",
   "dhp126:1": "U materici se jedni rađaju, ",
   "dhp126:2": "a zločinci u paklu; ",
-  "dhp126:3": "na nebo dobročinitelji idu, "
+  "dhp126:3": "na nebo dobročinitelji idu, ",
+  "dhp126:4": "a pročišćeni potpuno oslobađaju. "
 }
