Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -50,5 +50,6 @@
   "dhp126:1": "U materici se jedni rađaju, ",
   "dhp126:2": "a zločinci u paklu; ",
   "dhp126:3": "na nebo dobročinitelji idu, ",
-  "dhp126:4": "a pročišćeni potpuno oslobađaju. "
+  "dhp126:4": "a pročišćeni potpuno oslobađaju. ",
+  "dhp127:1": "127. Ni u visinama, ni u utrobi mora, "
 }
