Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -53,5 +53,6 @@
   "dhp126:4": "a pročišćeni potpuno oslobađaju. ",
   "dhp127:1": "Ni u visinama, ni u utrobi mora, ",
   "dhp127:2": "ni u sred planine, ",
-  "dhp127:3": "nema mesta na svetu "
+  "dhp127:3": "nema mesta na svetu ",
+  "dhp127:4": "gde nas loša dela ne sustižu. "
 }
