Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -57,5 +57,6 @@
   "dhp127:4": "gde nas loša dela ne sustižu. ",
   "dhp128:1": "Ni u visinama, ni u utrobi mora, ",
   "dhp128:2": "ni u sred planine, ",
-  "dhp128:3": "nema mesta na svetu "
+  "dhp128:3": "nema mesta na svetu ",
+  "dhp128:4": "gde nas smrt pobediti neće. "
 }
