--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -1,3 +1,4 @@
 {
-  "dhp129:0.1": "Kratka zbirka Budnih govora "
+  "dhp129:0.1": "Kratka zbirka Budnih govora ",
+  "dhp129:0.2": "Reči mudrosti "
 }
