--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -1,5 +1,6 @@
 {
   "dhp129:0.1": "Kratka zbirka Budnih govora ",
   "dhp129:0.2": "Reči mudrosti ",
-  "dhp129:0.3": "Kazna "
+  "dhp129:0.3": "Kazna ",
+  "dhp129:1": "Svako od batine strahuje, "
 }
