Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -2,5 +2,6 @@
   "dhp129:0.1": "Kratka zbirka Budnih govora ",
   "dhp129:0.2": "Reči mudrosti ",
   "dhp129:0.3": "Kazna ",
-  "dhp129:1": "Svako od batine strahuje, "
+  "dhp129:1": "Svako od batine strahuje, ",
+  "dhp129:2": "svako od smrti strepi, "
 }
