--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -3,5 +3,6 @@
   "dhp129:0.2": "Reči mudrosti ",
   "dhp129:0.3": "Kazna ",
   "dhp129:1": "Svako od batine strahuje, ",
-  "dhp129:2": "svako od smrti strepi, "
+  "dhp129:2": "svako od smrti strepi, ",
+  "dhp129:3": "pošavši od samoga sebe, "
 }
