Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -4,5 +4,6 @@
   "dhp129:0.3": "Kazna ",
   "dhp129:1": "Svako od batine strahuje, ",
   "dhp129:2": "svako od smrti strepi, ",
-  "dhp129:3": "pošavši od samoga sebe, "
+  "dhp129:3": "pošavši od samoga sebe, ",
+  "dhp129:4": "ne ubijaj, niti ubijanju uzrok budi. "
 }
