--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -8,5 +8,6 @@
   "dhp129:4": "ne ubijaj, niti ubijanju uzrok budi. ",
   "dhp130:1": "Svako od batine strahuje, ",
   "dhp130:2": "svakom je život drag, ",
-  "dhp130:3": "pošavši od samoga sebe, "
+  "dhp130:3": "pošavši od samoga sebe, ",
+  "dhp130:4": "ne ubijaj, niti ubijanju uzrok budi. "
 }
