Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -9,5 +9,6 @@
   "dhp130:1": "Svako od batine strahuje, ",
   "dhp130:2": "svakom je život drag, ",
   "dhp130:3": "pošavši od samoga sebe, ",
-  "dhp130:4": "ne ubijaj, niti ubijanju uzrok budi. "
+  "dhp130:4": "ne ubijaj, niti ubijanju uzrok budi. ",
+  "dhp131:1": "Onaj ko bića željna sreće "
 }
