--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -10,5 +10,6 @@
   "dhp130:2": "svakom je život drag, ",
   "dhp130:3": "pošavši od samoga sebe, ",
   "dhp130:4": "ne ubijaj, niti ubijanju uzrok budi. ",
-  "dhp131:1": "Onaj ko bića željna sreće "
+  "dhp131:1": "Onaj ko bića željna sreće ",
+  "dhp131:2": "štapom povređuje, "
 }
