Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -13,5 +13,6 @@
   "dhp131:1": "Onaj ko bića željna sreće ",
   "dhp131:2": "štapom povređuje, ",
   "dhp131:3": "jer i sam sreću priželjkuje, ",
-  "dhp131:4": "za toga posle smrti sreće nema. "
+  "dhp131:4": "za toga posle smrti sreće nema. ",
+  "dhp132:1": "Onaj ko bića željna sreće "
 }
