--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -15,5 +15,6 @@
   "dhp131:3": "jer i sam sreću priželjkuje, ",
   "dhp131:4": "za toga posle smrti sreće nema. ",
   "dhp132:1": "Onaj ko bića željna sreće ",
-  "dhp132:2": "štapom ne povređuje, "
+  "dhp132:2": "štapom ne povređuje, ",
+  "dhp132:3": "jer i sam sreću priželjkuje, "
 }
