--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -17,5 +17,6 @@
   "dhp132:1": "Onaj ko bića željna sreće ",
   "dhp132:2": "štapom ne povređuje, ",
   "dhp132:3": "jer i sam sreću priželjkuje, ",
-  "dhp132:4": "za toga posle smrti sreće ima. "
+  "dhp132:4": "za toga posle smrti sreće ima. ",
+  "dhp133:1": "Ne govori grubo, "
 }
