Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -18,5 +18,6 @@
   "dhp132:2": "štapom ne povređuje, ",
   "dhp132:3": "jer i sam sreću priželjkuje, ",
   "dhp132:4": "za toga posle smrti sreće ima. ",
-  "dhp133:1": "Ne govori grubo, "
+  "dhp133:1": "Ne govori grubo, ",
+  "dhp133:2": "jer oni kojima tako govoriš mogu uzvratiti. "
 }
