Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -20,5 +20,6 @@
   "dhp132:4": "za toga posle smrti sreće ima. ",
   "dhp133:1": "Ne govori grubo, ",
   "dhp133:2": "jer oni kojima tako govoriš mogu uzvratiti. ",
-  "dhp133:3": "Bolan je govor ispunjen besom, "
+  "dhp133:3": "Bolan je govor ispunjen besom, ",
+  "dhp133:4": "za njim ti možda osveta sledi. "
 }
