Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -22,5 +22,6 @@
   "dhp133:2": "jer oni kojima tako govoriš mogu uzvratiti. ",
   "dhp133:3": "Bolan je govor ispunjen besom, ",
   "dhp133:4": "za njim ti možda osveta sledi. ",
-  "dhp134:1": "Ali ako si utihnuo, "
+  "dhp134:1": "Ali ako si utihnuo, ",
+  "dhp134:2": "poput naprslog gonga, "
 }
