--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -23,5 +23,6 @@
   "dhp133:3": "Bolan je govor ispunjen besom, ",
   "dhp133:4": "za njim ti možda osveta sledi. ",
   "dhp134:1": "Ali ako si utihnuo, ",
-  "dhp134:2": "poput naprslog gonga, "
+  "dhp134:2": "poput naprslog gonga, ",
+  "dhp134:3": "tad si slobodu dosegao, "
 }
