Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -25,5 +25,6 @@
   "dhp134:1": "Ali ako si utihnuo, ",
   "dhp134:2": "poput naprslog gonga, ",
   "dhp134:3": "tad si slobodu dosegao, ",
-  "dhp134:4": "u tebi gneva nema. "
+  "dhp134:4": "u tebi gneva nema. ",
+  "dhp135:1": "Kao što čobani štapom "
 }
