--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -26,5 +26,6 @@
   "dhp134:2": "poput naprslog gonga, ",
   "dhp134:3": "tad si slobodu dosegao, ",
   "dhp134:4": "u tebi gneva nema. ",
-  "dhp135:1": "Kao što čobani štapom "
+  "dhp135:1": "Kao što čobani štapom ",
+  "dhp135:2": "na pašu goveda isteruju, "
 }
