Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -27,5 +27,6 @@
   "dhp134:3": "tad si slobodu dosegao, ",
   "dhp134:4": "u tebi gneva nema. ",
   "dhp135:1": "Kao što čobani štapom ",
-  "dhp135:2": "na pašu goveda isteruju, "
+  "dhp135:2": "na pašu goveda isteruju, ",
+  "dhp135:3": "isto tako starost i smrt "
 }
