--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -28,5 +28,6 @@
   "dhp134:4": "u tebi gneva nema. ",
   "dhp135:1": "Kao što čobani štapom ",
   "dhp135:2": "na pašu goveda isteruju, ",
-  "dhp135:3": "isto tako starost i smrt "
+  "dhp135:3": "isto tako starost i smrt ",
+  "dhp135:4": "iz živih bića život isteruju. "
 }
