--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -30,5 +30,6 @@
   "dhp135:2": "na pašu goveda isteruju, ",
   "dhp135:3": "isto tako starost i smrt ",
   "dhp135:4": "iz živih bića život isteruju. ",
-  "dhp136:1": "Ako i ne shvata "
+  "dhp136:1": "Ako i ne shvata ",
+  "dhp136:2": "kad sam zlodela čini, "
 }
