Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -32,5 +32,6 @@
   "dhp135:4": "iz živih bića život isteruju. ",
   "dhp136:1": "Ako i ne shvata ",
   "dhp136:2": "kad sam zlodela čini, ",
-  "dhp136:3": "budala, ipak, zbog njih pati "
+  "dhp136:3": "budala, ipak, zbog njih pati ",
+  "dhp136:4": "kao da u plamenu gori. "
 }
