Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -36,5 +36,6 @@
   "dhp136:4": "kao da u plamenu gori. ",
   "dhp137:1": "Ko batinom nenasilno ",
   "dhp137:2": "i bezazlenog povredi, ",
-  "dhp137:3": "taj se brzo u jednom "
+  "dhp137:3": "taj se brzo u jednom ",
+  "dhp137:4": "od ovih deset stanja nađe: "
 }
