--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -37,5 +37,6 @@
   "dhp137:1": "Ko batinom nenasilno ",
   "dhp137:2": "i bezazlenog povredi, ",
   "dhp137:3": "taj se brzo u jednom ",
-  "dhp137:4": "od ovih deset stanja nađe: "
+  "dhp137:4": "od ovih deset stanja nađe: ",
+  "dhp138:1": "strašni bolovi, izgubljena stvar, "
 }
