--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -38,5 +38,6 @@
   "dhp137:2": "i bezazlenog povredi, ",
   "dhp137:3": "taj se brzo u jednom ",
   "dhp137:4": "od ovih deset stanja nađe: ",
-  "dhp138:1": "strašni bolovi, izgubljena stvar, "
+  "dhp138:1": "strašni bolovi, izgubljena stvar, ",
+  "dhp138:2": "telesna povreda, "
 }
