Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -40,5 +40,6 @@
   "dhp137:4": "od ovih deset stanja nađe: ",
   "dhp138:1": "strašni bolovi, izgubljena stvar, ",
   "dhp138:2": "telesna povreda, ",
-  "dhp138:3": "ozbiljna bolest "
+  "dhp138:3": "ozbiljna bolest ",
+  "dhp138:4": "ili rastrojstvo uma, "
 }
