--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -42,5 +42,6 @@
   "dhp138:2": "telesna povreda, ",
   "dhp138:3": "ozbiljna bolest ",
   "dhp138:4": "ili rastrojstvo uma, ",
-  "dhp139:1": "vladar će ga progoniti, "
+  "dhp139:1": "vladar će ga progoniti, ",
+  "dhp139:2": "ozbiljno biće optužen, "
 }
