Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -43,5 +43,6 @@
   "dhp138:3": "ozbiljna bolest ",
   "dhp138:4": "ili rastrojstvo uma, ",
   "dhp139:1": "vladar će ga progoniti, ",
-  "dhp139:2": "ozbiljno biće optužen, "
+  "dhp139:2": "ozbiljno biće optužen, ",
+  "dhp139:3": "gubitak rođaka, "
 }
