--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -44,5 +44,6 @@
   "dhp138:4": "ili rastrojstvo uma, ",
   "dhp139:1": "vladar će ga progoniti, ",
   "dhp139:2": "ozbiljno biće optužen, ",
-  "dhp139:3": "gubitak rođaka, "
+  "dhp139:3": "gubitak rođaka, ",
+  "dhp139:4": "propast imetka, "
 }
