Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -45,5 +45,6 @@
   "dhp139:1": "vladar će ga progoniti, ",
   "dhp139:2": "ozbiljno biće optužen, ",
   "dhp139:3": "gubitak rođaka, ",
-  "dhp139:4": "propast imetka, "
+  "dhp139:4": "propast imetka, ",
+  "dhp140:1": "ili će plamen progutati "
 }
