Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -46,5 +46,6 @@
   "dhp139:2": "ozbiljno biće optužen, ",
   "dhp139:3": "gubitak rođaka, ",
   "dhp139:4": "propast imetka, ",
-  "dhp140:1": "ili će plamen progutati "
+  "dhp140:1": "ili će plamen progutati ",
+  "dhp140:2": "kuće njegove, "
 }
