--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -48,5 +48,6 @@
   "dhp139:4": "propast imetka, ",
   "dhp140:1": "ili će plamen progutati ",
   "dhp140:2": "kuće njegove, ",
-  "dhp140:3": "a posle smrti će se takva budala "
+  "dhp140:3": "a posle smrti će se takva budala ",
+  "dhp140:4": "u mukama naći. "
 }
