Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -51,5 +51,6 @@
   "dhp140:3": "a posle smrti će se takva budala ",
   "dhp140:4": "u mukama naći. ",
   "dhp141:1": "Ni lutanje nag naokolo, upletene kose, blatnjavog tela, ",
-  "dhp141:2": "ni gladovanje, ni ležanje na goloj zemlji, "
+  "dhp141:2": "ni gladovanje, ni ležanje na goloj zemlji, ",
+  "dhp141:3": "trljanje tela pepelom, a ni sedenje nepomično, "
 }
