Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp129-145_translation-sr-brankokovacevic.json
@@ -52,5 +52,6 @@
   "dhp140:4": "u mukama naći. ",
   "dhp141:1": "Ni lutanje nag naokolo, upletene kose, blatnjavog tela, ",
   "dhp141:2": "ni gladovanje, ni ležanje na goloj zemlji, ",
-  "dhp141:3": "trljanje tela pepelom, a ni sedenje nepomično, "
+  "dhp141:3": "trljanje tela pepelom, a ni sedenje nepomično, ",
+  "dhp141:4": "ništa od toga ne pročisti onog ko sumnju prevladao nije. "
 }
